Day9/kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: chirag1212/nginx-webpage:apple
        resources:
          limits:
            cpu: "50m"
            memory: "100Mi"
          requests:
            cpu: "2m"
            memory: "5Mi"     
        ports:
        - containerPort: 80
