Day9/kubernetes/another-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: another-service
spec:
  selector:
    app: another
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
