Day9/kubernetes/ingress-resouce.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - myapp.local
      secretName: tls-secret
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /apple
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /orange
        pathType: Prefix
        backend:
          service:
            name: another-service
            port:
              number: 80
